[package]
name = "rotation"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.23.6"
js-sys = "0.3"
rustfft = "3.0.1"
transpose = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.13"

[dependencies.web-sys]
version = "0.3.40"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  "Response",
  "WorkerGlobalScope",
]
